--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -65,15 +65,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="124" id="Ksm-pf-egI" customClass="TweetTableViewCell" customModule="Twitter" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="124"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="150" id="Ksm-pf-egI" customClass="TweetTableViewCell" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="150"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ksm-pf-egI" id="k44-T2-Vcn">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="123.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="149.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Tweeter Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eeE-m7-Ajg">
-                                            <rect key="frame" x="97" y="11" width="116" height="20.5"/>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Tweeter Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eeE-m7-Ajg">
+                                            <rect key="frame" x="97" y="0.0" width="271" height="20.5"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                             <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
@@ -85,33 +85,45 @@
                                                 <constraint firstAttribute="width" constant="74" id="ecn-ow-LGr"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Tweets" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KTn-Mt-dVg">
-                                            <rect key="frame" x="97" y="36" width="278" height="77"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tweets" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KTn-Mt-dVg">
+                                            <rect key="frame" x="97" y="24.5" width="271" height="84.5"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xT6-eL-XdL" userLabel="ReTweet Button">
+                                            <rect key="frame" x="299" y="116" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="30" id="DH9-6Y-oyu"/>
+                                                <constraint firstAttribute="height" constant="30" id="flt-Ad-Waj"/>
+                                            </constraints>
+                                            <state key="normal" image="retweet-icon"/>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iOf-W7-dho" userLabel="Favorite Button">
+                                            <rect key="frame" x="336" y="116" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="30" id="K4W-uW-mPM"/>
+                                                <constraint firstAttribute="height" constant="30" id="zse-M3-Qjp"/>
+                                            </constraints>
+                                            <state key="normal" image="favor-icon"/>
+                                        </button>
                                     </subviews>
                                     <color key="backgroundColor" red="0.83995108220000003" green="0.96620064210000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
-                                        <constraint firstItem="KTn-Mt-dVg" firstAttribute="top" secondItem="eeE-m7-Ajg" secondAttribute="bottom" id="0RT-aY-jU7"/>
-                                        <constraint firstItem="eeE-m7-Ajg" firstAttribute="leading" secondItem="eqq-wZ-qbx" secondAttribute="trailing" constant="7" id="2a5-aF-qWB"/>
-                                        <constraint firstItem="KTn-Mt-dVg" firstAttribute="top" secondItem="eeE-m7-Ajg" secondAttribute="bottom" constant="4" id="6LC-Ae-jSu"/>
-                                        <constraint firstAttribute="bottom" secondItem="KTn-Mt-dVg" secondAttribute="bottom" id="6x7-7G-ddx"/>
+                                        <constraint firstItem="xT6-eL-XdL" firstAttribute="bottom" secondItem="k44-T2-Vcn" secondAttribute="bottomMargin" constant="7" id="4hk-xZ-1an"/>
                                         <constraint firstItem="KTn-Mt-dVg" firstAttribute="leading" secondItem="eqq-wZ-qbx" secondAttribute="trailing" constant="7" id="AEz-Fc-bGu"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="KTn-Mt-dVg" secondAttribute="trailing" id="HbB-XX-VUl"/>
-                                        <constraint firstItem="eeE-m7-Ajg" firstAttribute="top" secondItem="k44-T2-Vcn" secondAttribute="topMargin" id="L4Z-wD-bwo"/>
-                                        <constraint firstItem="eeE-m7-Ajg" firstAttribute="top" secondItem="k44-T2-Vcn" secondAttribute="topMargin" id="X2v-dy-LgV"/>
+                                        <constraint firstItem="iOf-W7-dho" firstAttribute="leading" secondItem="xT6-eL-XdL" secondAttribute="trailing" constant="7" id="BL8-gz-jx0"/>
+                                        <constraint firstItem="xT6-eL-XdL" firstAttribute="top" secondItem="KTn-Mt-dVg" secondAttribute="bottom" constant="7" id="RDI-XJ-LCx"/>
+                                        <constraint firstItem="iOf-W7-dho" firstAttribute="trailing" secondItem="k44-T2-Vcn" secondAttribute="trailingMargin" constant="7" id="Y62-wd-Dwf"/>
                                         <constraint firstItem="eqq-wZ-qbx" firstAttribute="leading" secondItem="k44-T2-Vcn" secondAttribute="leadingMargin" id="aNv-U0-dDE"/>
-                                        <constraint firstAttribute="trailing" secondItem="KTn-Mt-dVg" secondAttribute="trailing" id="ahS-4w-aC9"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="KTn-Mt-dVg" secondAttribute="bottom" id="bYp-9J-Xe2"/>
-                                        <constraint firstAttribute="bottom" secondItem="KTn-Mt-dVg" secondAttribute="bottom" id="imv-29-CxF"/>
-                                        <constraint firstAttribute="trailing" secondItem="KTn-Mt-dVg" secondAttribute="trailing" id="jwu-1z-nTJ"/>
+                                        <constraint firstItem="iOf-W7-dho" firstAttribute="top" secondItem="KTn-Mt-dVg" secondAttribute="bottom" constant="7" id="aoz-LN-IxE"/>
                                         <constraint firstItem="KTn-Mt-dVg" firstAttribute="top" secondItem="eeE-m7-Ajg" secondAttribute="bottom" constant="4" id="kZf-fw-D3m"/>
-                                        <constraint firstItem="eeE-m7-Ajg" firstAttribute="top" secondItem="k44-T2-Vcn" secondAttribute="topMargin" id="kj1-tN-a1m"/>
+                                        <constraint firstAttribute="trailing" secondItem="KTn-Mt-dVg" secondAttribute="trailing" constant="7" id="kxz-Qc-EAz"/>
+                                        <constraint firstItem="eeE-m7-Ajg" firstAttribute="top" secondItem="k44-T2-Vcn" secondAttribute="top" id="m0e-0t-qgx"/>
                                         <constraint firstItem="eqq-wZ-qbx" firstAttribute="top" secondItem="k44-T2-Vcn" secondAttribute="topMargin" id="mqV-uJ-CH5"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="KTn-Mt-dVg" secondAttribute="bottom" id="ucc-7R-bb9"/>
-                                        <constraint firstItem="KTn-Mt-dVg" firstAttribute="top" secondItem="eeE-m7-Ajg" secondAttribute="bottom" constant="8" symbolic="YES" id="yCr-PY-Xxb"/>
+                                        <constraint firstAttribute="trailing" secondItem="eeE-m7-Ajg" secondAttribute="trailing" constant="7" id="o5T-wk-QgX"/>
+                                        <constraint firstItem="eeE-m7-Ajg" firstAttribute="leading" secondItem="eqq-wZ-qbx" secondAttribute="trailing" constant="7" id="plt-Dv-vh9"/>
+                                        <constraint firstItem="iOf-W7-dho" firstAttribute="bottom" secondItem="k44-T2-Vcn" secondAttribute="bottomMargin" constant="7" id="z8j-ho-l5A"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -149,11 +161,11 @@
         <scene sceneID="rPV-xf-2jZ">
             <objects>
                 <viewController id="KEK-Eg-rp5" customClass="TweetViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" ambiguous="YES" id="04B-KI-O6t">
+                    <view key="view" contentMode="scaleToFill" id="04B-KI-O6t">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" usesAttributedText="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pLx-gb-UAL">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" usesAttributedText="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pLx-gb-UAL">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" red="0.83995108220000003" green="0.96620064210000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
@@ -241,4 +253,8 @@
             <point key="canvasLocation" x="2733.5999999999999" y="169.56521739130437"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="favor-icon" width="30" height="30"/>
+        <image name="retweet-icon" width="30" height="30"/>
+    </resources>
 </document>
